# filament-mat-lsp

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  README.md  language-configuration.json  opencode.json  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
.github/: dependabot.yml
.github/workflows/: ci.yml
.opencode/agents/: ci-check.md  ci-fix.md
client/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
client/src/: download.ts  extension.ts
client/src/test/: runTest.ts
client/src/test/suite/: extension.test.ts  index.ts
native/: .rustfmt.toml  Cargo.toml
native/src/: block_cache.rs  color_provider.rs  completion.rs  diagnostics.rs  hover.rs  inlay_hints.rs  lexer.rs  lib.rs  main.rs  parser.rs  references.rs  schema.rs  selection_range.rs  signature_help.rs  token.rs
native/src/lsp/: conv.rs  handlers.rs  mod.rs  semantic_tokens.rs  server.rs
server/: package-lock.json  package.json
server/src/: server.ts
syntaxes/: filament-mat.tmLanguage.json
test/: example.mat  sample.mat  simple.mat
