[package]
name = "filament-mat-core"
version = "0.1.0"
edition = "2024"
authors = ["filament-mat-lsp contributors"]
license = "MIT"
description = "Rust core for Filament Material LSP"

[lib]
name = "filament_mat_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
napi = { version = "3.8", features = ["napi3"] }
napi-derive = "2.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = "debuginfo"
