[package]
name = "filament-mat-lsp"
version = "0.1.0"
edition = "2024"
authors = ["filament-mat-lsp contributors"]
license = "MIT"
description = "Language Server Protocol implementation for Filament Material files"

[[bin]]
name = "filament-mat-lsp"
path = "src/main.rs"

[lib]
name = "filament_mat_lsp"
path = "src/lib.rs"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.97"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = "debuginfo"
